# daily-journal-tauri-svelte

./: .prettierrc.mjs  package-lock.json  package.json  tsconfig.json
src/: types.d.ts
src-tauri/: Cargo.toml  sqlite3.lib  tauri.conf.json
src-tauri/migrations/: 20241001015624_personal_metrics.sql  20241001015637_journal_entry.sql
src-tauri/src/: database.rs  main.rs  models.rs  schema.rs
src/routes/: +layout.svelte  +layout.ts  +page.svelte  Nav.svelte  SecuritiesForm.svelte  global.css
src/routes/entry/: +page.svelte
