[package]
name = "daily-journal-app-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8.0", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
devtools = "0.3.3"
dotenvy = "0.15.7"
thiserror = "1.0.64"
sqlx = {version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite", "json"] }
tokio = {version = "1.40.0", features = ["macros", "full", "rt-multi-thread"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
